--- a/pms/views/pms_room_views.xml
+++ b/pms/views/pms_room_views.xml
@@ -187,6 +187,7 @@
                 <field name="extra_beds_allowed" />
                 <field name="room_amenity_ids" widget="many2many_tags" />
                 <field name="short_name" />
+                <field name="parent_id" optional="hide" />
             </tree>
         </field>
     </record>
