[FIX]pms: search view sintax folio&reservtions domain

--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -706,6 +706,7 @@
                                     <group>
                                         <field name="user_id" />
                                         <field name="overbooking" />
+                                        <field name="blocked" />
                                     </group>
                                     <group>
                                         <!--<field
@@ -892,7 +893,7 @@
                     name="name"
                     string="Name"
                     filter_domain="[
-                        '|', '|', '|', '|',
+                        '|', '|', '|',
                         ('name', 'ilike', self),
                         ('partner_name', 'ilike', self),
                         ('partner_id.vat', 'ilike', self),
