--- a/pms/templates/pms_email_template.xml
+++ b/pms/templates/pms_email_template.xml
@@ -144,7 +144,7 @@
             >${('%s &lt;%s&gt;' % (object.pms_property_id.partner_id.name, object.pms_property_id.partner_id.email) or '')|safe}</field>
             <field name="email_to">${(object.email or '')|safe}</field>
             <field name="partner_to">${(object.partner_id.id or '')}</field>
-            <field name="lang">${object.partner_id.lang}</field>
+            <field name="lang">${object.lang}</field>
             <field name="subject">
                 Your reservation ${object.name} has been confirmed by the property staff
             </field>
