[IMP]pms: manage lang folio field by compute readonly false

--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -301,6 +301,11 @@
                                 attrs="{'invisible':[('reservation_type','in',('out'))]}"
                             />
                             <field
+                                name="lang"
+                                placeholder="Language"
+                                attrs="{'invisible':[('reservation_type','in',('out'))]}"
+                            />
+                            <field
                                 name="partner_internal_comment"
                                 placeholder="Comments about the customer"
                                 attrs="{'invisible':[('reservation_type','in',('out'))]}"
